# Awesome-Python-Macro-V2-Dev

./: .gitignore  .spec-kit.json  README.md  Tech-Stack-and-Features.md  main.py  push_updates.bat  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/templates/: plan-template.md
docs/: overview.md
scripts/: build.py
specs/: README.md
specs/001-comprehensive-macro-recording/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: cli_interface.py  macro_commands.py  playback_commands.py  recording_commands.py
src/core/: error_handling.py  logging_utils.py  macro_service.py  quickstart.py
src/export_import/: package_service.py
src/hotkeys/: hotkey_service.py
src/models/: action.py  hotkey.py  macro.py  macro_package.py  schedule.py  screenshot.py  user_settings.py
src/player/: playback_service.py
src/recorder/: input_capture.py  keyboard_handler.py  mouse_handler.py  recording_service.py
src/scheduler/: scheduling_service.py
src/storage/: json_storage.py
src/ui/: action_overlay.py  hotkey_dialog.py  macro_editor_dialog.py  macro_list_widget.py  main_window.py  settings_dialog.py  system_tray.py
src/utils/: dpi_handler.py  file_utils.py  screenshot_service.py  validation.py  windows_api.py
tests/: conftest.py
tests/contract/: test_hotkey_api.py  test_macro_management_api.py  test_playback_api.py  test_recording_api.py
tests/integration/: test_export_import.py  test_hotkey_management.py  test_macro_organization.py  test_overlay_system.py  test_playback_workflow.py  test_recording_workflow.py  (+2 more)
(+14 files in other folders)
